--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -1,3 +1,9 @@
+[dotfiles]
+vcs = git
+basedir = ~
+checkouts =
+    git@github.com:aclark4life/dotfiles
+
 [mongodb]
 vcs = git
 basedir = ~/Developer/mongodb
