--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -32,3 +32,4 @@ vcs = git
 basedir = ~/Developer
 checkouts =
     git@github.com:aclark4life/test-django-mongodb.git
+    git@github.com:aclark4life/django-mongodb.git
