--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -1,8 +1,12 @@
+[copilot]
+vcs = git
+basedir = ~/.config/nvim/pack/github/start/copilot.vim
+checkouts = git@github.com:github/copilot.vim
+
 [dotfiles]
 vcs = git
 basedir = ~
-checkouts =
-    git@github.com:aclark4life/dotfiles
+checkouts = git@github.com:aclark4life/dotfiles
 
 [mongodb]
 vcs = git
