--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -1,6 +1,6 @@
 [copilot]
 vcs = git
-basedir = ~/.config/nvim/pack/github/start/copilot.vim
+basedir = ~/.config/nvim/pack/github/start
 checkouts = git@github.com:github/copilot.vim
 
 [dotfiles]
