--- a/checkoutmanager/checkoutmanager.cfg
+++ b/checkoutmanager/checkoutmanager.cfg
@@ -1,3 +1,7 @@
+# This is a public configuration file for checkoutmanager and is
+# referenced by the `cm` function in zshrc along with all files
+# in the .checkoutmanager directory that end with .cfg.
+
 [copilot]
 vcs = git
 basedir = ~/.config/nvim/pack/github/start
