--- a/checkoutmanager/checkoutmanager.cfg
+++ b/checkoutmanager/checkoutmanager.cfg
@@ -1,6 +1,6 @@
 # This is a public configuration file for checkoutmanager and is
-# referenced by the `cm` function in zshrc along with all files
-# in the .checkoutmanager directory that end with .cfg.
+# referenced by the `cm` function in .zshrc along with all files
+# with ".cfg" extension.
 
 [copilot]
 vcs = git
