Remove target dir
By the time cm runs, case won't matter.

--- a/checkoutmanager/checkoutmanager.cfg
+++ b/checkoutmanager/checkoutmanager.cfg
@@ -5,7 +5,7 @@
 [dotfiles]
 vcs = git
 basedir = ~
-checkouts = git@github.com:aclark4life/dotfiles Dotfiles
+checkouts = git@github.com:aclark4life/dotfiles
 
 [copilot]
 vcs = git
