--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -11,3 +11,8 @@ checkouts = git@github.com:aclark4life/dotfiles
 vcs = git
 basedir = ~/.config/nvim/pack/github/start
 checkouts = git@github.com:github/copilot.vim
+
+[ohmyzsh]
+vcs = git
+basedir = ~
+checkouts = git@github.com:ohmyzsh/ohmyzsh.git .oh-my-zsh
