--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ config/*
 !config/nvim/
 config/nvim/*
 !config/nvim/init.vim
+!config/zsh/
+config/zsh/*
+!config/zsh/custom.zsh
 server/*
 !server/server.*
 .DS_Store
