--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -1,3 +1,5 @@
+# checkoutmanager complains if it doesn't find a config file
+#
 # Sample config file.  Should be placed as .checkoutmanager.cfg in your home
 # directory.
 #
