--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ config/zsh/*
 !config/zsh/add_shortcuts_folder_to_dock.zsh
 !config/zsh/aliases.zsh
 !config/zsh/functions.zsh
+nvm/*
+!nvm/nvm.sh
 server/*
 !server/server.*
 .DS_Store
