--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -1,7 +1,7 @@
-[copilot]
-vcs = git
-basedir = ~/.config/nvim/pack/github/start
-checkouts = git@github.com:github/copilot.vim
+# [copilot]
+# vcs = git
+# basedir = ~/.config/nvim/pack/github/start
+# checkouts = git@github.com:github/copilot.vim
 
 [dotfiles]
 vcs = git
