--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -3,6 +3,11 @@ vcs = git
 basedir = ~/.config/nvim/pack/github/start
 checkouts = git@github.com:github/copilot.vim
 
+[vim-just]
+vcs = git
+basedir = ~/.config/nvim/pack/NoahTheDuke/start
+checkouts = git@github.com:NoahTheDuke/vim-just.git
+
 [dotfiles]
 vcs = git
 basedir = ~
