--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
-/home/alex.clark/Dotfiles/.gitignore
+checkoutmanager/*
+!checkoutmanager/checkoutmanager.cfg
+ssh/*
+!ssh/config
+config/*
+!config/nvim/
+config/nvim/*
+!config/nvim/init.vim
+!config/zsh/
+config/zsh/*
+!config/zsh/add_shortcuts_folder_to_dock.zsh
+!config/zsh/aliases.zsh
+!config/zsh/functions.zsh
+nvm/*
+!nvm/nvm.sh
+server/*
+!server/server.*
+.DS_Store
+package-lock.json
