--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -1,5 +1,6 @@
 [root]
 basedir = ~/Developer
 checkouts = 
-    git@github.com:aclark4life/checkoutmanager.git
+    git@github.com:aclark4life/checkoutmanager
+    git@github.com:aclark4life/django-mongodb-cli
 vcs = git
