--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -1,6 +1,9 @@
 [root]
 basedir = ~/Developer
 checkouts = 
+    git@github.com:aclark4life/aclarknet
     git@github.com:aclark4life/checkoutmanager
     git@github.com:aclark4life/django-mongodb-cli
+    git@github.com:aclark4life/just-gdal
+    git@github.com:aclark4life/zeitcaster-events
 vcs = git
