--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -2,8 +2,10 @@
 basedir = ~/Developer
 checkouts = 
     git@github.com:aclark4life/aclarknet
+    git@github.com:aclark4life/connect-boone-county
     git@github.com:aclark4life/checkoutmanager
     git@github.com:aclark4life/django-mongodb-cli
+    git@github.com:aclark4life/esrd
     git@github.com:aclark4life/just-gdal
     git@github.com:zeitbyte/zeitcaster-events
 vcs = git
