--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -7,5 +7,6 @@ checkouts =
     git@github.com:aclark4life/django-mongodb-cli
     git@github.com:aclark4life/esrd
     git@github.com:aclark4life/just-gdal
+    git@github.com:aclark4life/setup
     git@github.com:zeitbyte/zeitcaster-events
 vcs = git
