--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -6,6 +6,7 @@ checkouts =
     git@github.com:aclark4life/connect-boone-county
     git@github.com:aclark4life/django-mongodb-cli
     git@github.com:aclark4life/esrd
+    git@github.com:aclark4life/headstraight4life.com
     git@github.com:aclark4life/just-gdal
     git@github.com:aclark4life/project-makefile
     git@github.com:aclark4life/setup
