--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -4,11 +4,13 @@ checkouts =
     git@github.com:aclark4life/aclarknet
     git@github.com:aclark4life/aclarknet-2024
     git@github.com:aclark4life/connect-boone-county
+    git@github.com:aclark4life/dcpython-website
     git@github.com:aclark4life/django-mongodb-cli
     git@github.com:aclark4life/esrd
     git@github.com:aclark4life/headstraight4life.com
     git@github.com:aclark4life/just-gdal
     git@github.com:aclark4life/project-makefile
     git@github.com:aclark4life/setup
+    git@github.com:python-pillow/Pillow
     git@github.com:zeitbyte/zeitcaster-events
 vcs = git
