--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -9,6 +9,7 @@ checkouts =
     git@github.com:aclark4life/esrd
     git@github.com:aclark4life/headstraight4life.com
     git@github.com:aclark4life/just-gdal
+    git@github.com:aclark4life/other
     git@github.com:aclark4life/project-makefile
     git@github.com:aclark4life/setup
     git@github.com:python-pillow/Pillow
