--- a/brewfile/developer/Brewfile
+++ b/brewfile/developer/Brewfile
@@ -16,8 +16,6 @@ brew "telnet"
 brew "tree"
 brew "wget"
 brew "xz"
-
-# Casks
 cask "discord"
 cask "firefox"
 cask "jumpcut"
@@ -26,7 +24,6 @@ cask "mongodb-compass"
 cask "pycharm"
 cask "sublime-text"
 cask "xquartz"
-## Sometimes these casks are already installed by IT dept
-# cask "google-chrome"
-# cask "slack"
-# cask "zoom"
+cask "google-chrome"
+cask "slack"
+cask "zoom"
