--- a/brewfile/developer/Brewfile
+++ b/brewfile/developer/Brewfile
@@ -1,29 +1,2 @@
-brew "act"
-brew "cmake"
-brew "coredns"
-brew "coreutils"
-brew "libmemcached"
-brew "mongosh"
-brew "mongo-c-driver"
-brew "mongodb-atlas"
-brew "neovim"
-brew "nvm"
-brew "podman"
-brew "postgresql@14"
-brew "pyenv"
-brew "python"
-brew "telnet"
-brew "tree"
-brew "wget"
-brew "xz"
-cask "discord"
-cask "firefox"
-cask "jumpcut"
-cask "windows-app"
-cask "mongodb-compass"
-cask "pycharm"
-cask "sublime-text"
-cask "xquartz"
-cask "google-chrome"
-cask "slack"
-cask "zoom"
+brew "gh"
+brew "just"
