--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -3,7 +3,7 @@ basedir = ~/Developer
 checkouts = 
     git@github.com:aclark4life/aclarknet
     git@github.com:aclark4life/connect-boone-county
-    git@github.com:aclark4life/dcpython-website
+    git@github.com:aclark4life/dcpython
     git@github.com:aclark4life/django-mongodb-cli
     git@github.com:aclark4life/esrd
     git@github.com:aclark4life/headstraight4life.com
