--- a/brewfile/developer/Brewfile
+++ b/brewfile/developer/Brewfile
@@ -5,6 +5,7 @@ brew "just"
 brew "libpng"
 brew "libtiff"
 brew "mongo-c-driver"
+brew "mongodb/brew/libmongocrypt"
 brew "mongosh"
 brew "nvm"
 brew "podman"
