--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -2,6 +2,7 @@
 basedir = ~/Developer
 checkouts = 
     git@github.com:aclark4life/aclarknet
+    git@github.com:aclark4life/backup
     git@github.com:aclark4life/dcpython
     git@github.com:aclark4life/django-mongodb-cli
     git@github.com:aclark4life/esrd
