--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -7,6 +7,7 @@ checkouts =
     git@github.com:aclark4life/django-mongodb-cli
     git@github.com:aclark4life/esrd
     git@github.com:aclark4life/headstraight4life.com
+    git@github.com:aclark4life/quake-map-generator
     git@github.com:aclark4life/setup
     git@github.com:python-pillow/Pillow
     git@github.com:zeitbyte/zeitcaster-events
