--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -1,13 +1,12 @@
 [root]
 basedir = ~/Developer
 checkouts = 
-#    git@github.com:aclark4life/aclarknet
+    git@github.com:aclark4life/aclarknet
     git@github.com:aclark4life/backup
     git@github.com:aclark4life/dcpython
     git@github.com:aclark4life/django-mongodb-cli
     git@github.com:aclark4life/esrd
     git@github.com:aclark4life/headstraight4life.com
-    git@github.com:aclark4life/quake-map-generator
     git@github.com:aclark4life/setup
     git@github.com:python-pillow/Pillow
     git@github.com:zeitbyte/zeitcaster-events
