--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -1,7 +1,7 @@
 [root]
 basedir = ~/Developer
 checkouts = 
-    # git@github.com:aclark4life/aclarknet
+    git@github.com:aclark4life/aclarknet
     git@github.com:aclark4life/backup
     git@github.com:aclark4life/dcpython
     git@github.com:aclark4life/django-mongodb-cli
