--- a/brewfile/developer/Brewfile
+++ b/brewfile/developer/Brewfile
@@ -5,11 +5,11 @@ brew "just"
 brew "libpng"
 brew "libtiff"
 brew "mongo-c-driver"
-brew "mongodb-compass"
 brew "mongosh"
 brew "nvm"
 brew "podman"
 brew "postgis"
 brew "postgresql@14"
 brew "wget"
+cask "mongodb-compass"
 cask "slack"
