--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -9,6 +9,7 @@ checkouts =
     git@github.com:aclark4life/esrd
     git@github.com:aclark4life/headstraight4life.com
     git@github.com:aclark4life/quake-map-generator
+    git@github.com:aclark4life/service-providers
     git@github.com:aclark4life/setup
     git@github.com:python-pillow/Pillow
     git@github.com:zeitbyte/zeitcaster-events
