--- a/checkoutmanager.cfg
+++ b/checkoutmanager.cfg
@@ -5,6 +5,7 @@ checkouts =
     git@github.com:aclark4life/backup
     git@github.com:aclark4life/cs
     git@github.com:aclark4life/dcpython
+    git@github.com:aclark4life/dbx-python-cli
     git@github.com:aclark4life/django-mongodb-cli
     git@github.com:aclark4life/esrd
     git@github.com:aclark4life/headstraight4life.com
